--- a/UdemyExercises copy/lambda_practice/.classpath
+++ b/UdemyExercises copy/lambda_practice/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Files"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
